UI/frontend/src/assets/styles/InvestStockPriceStyles.css
.invest-stockPricePage {
    width: auto;
    margin-top: 16px;
    margin-left: 3%;
    margin-right: 1%;
    margin-bottom: 20px;
}

#investStockPriceHistoryTable .ht-cell {
    width: fit-content;
    text-align: right;
    margin-top: 8px;
    padding-left: 6px;
    padding-right: 6px;
    padding-top: 1px;
    padding-bottom: 1px;
}

#investStockPriceHistoryTable {
    width: 100%;
    margin-bottom: 15px;
}

.invest-stockprice-form {
    margin-top: 10px;
    margin-bottom: 20px;
}

@media only screen and (max-width: 1600px) {
    .PlotComponent {
        display: none;
    }
}

.PlotComponent {
    width: 50%;
    margin-top: 10px;
    float: right;
}

